--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -73,10 +73,10 @@ jobs:
           args: --accept-routes
           use-cache: "true"
 
-      - name: SSH Agent for PVE authentication
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ env.PVE_SSH_KEY }}
+      # - name: SSH Agent for PVE authentication
+      #   uses: webfactory/ssh-agent@v0.9.0
+      #   with:
+      #     ssh-private-key: ${{ env.PVE_SSH_KEY }}
 
       - name: Get app and org names
         run: |
