--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -67,6 +67,11 @@ jobs:
           args: --accept-routes
           use-cache: "true"
 
+      - name: SSH Agent for PVE authentication
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ env.PROXMOX_VE_SSH_PRIVATE_KEY }}
+
       - name: Get app and org names
         run: |
           repo=${{ github.repository }}
