change ssh key var name ro remove overlap with provider expected env var

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: SSH Agent for PVE authentication
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ env.PROXMOX_VE_SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ env.PVE_SSH_KEY }}
 
       - name: Get app and org names
         run: |
