--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "compose"]
 	path = compose
 	url = https://github.com/cjmay-dev/docker-compose-sidecars
+[submodule "ansible/roles"]
+	path = ansible/roles
+	url = https://github.com/cjmay-dev/ansible-roles
