debug tf on workflow dispatch [no ci]

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -78,6 +78,11 @@ jobs:
           org=$(echo "$repo" | cut -d "/" -f 1)
           echo "ORG_SHORTNAME=$org" >> $GITHUB_ENV
 
+      - name: Debug Terraform on workflow dispatch
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: |
+          export TF_LOG=TRACE
+
       - name: Run Terraform
         run: |
           make terraform-init
