--- a/ansible/deploy-compose-project.yml
+++ b/ansible/deploy-compose-project.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Ensure repository is present and up to date
       ansible.builtin.git:
-        repo: https://github.com/{{ lookup('env', 'GITHUB_REPOSITORY') }}.git
+        repo: https://github.com/{{ lookup('env', 'GITHUB_REPOSITORY') }}
         dest: /opt/app
         version: main
         update: yes
