--- a/.github/workflows/deploy-all.yaml
+++ b/.github/workflows/deploy-all.yaml
@@ -108,6 +108,7 @@ jobs:
 
   configure-docker-host:
     runs-on: ubuntu-latest
+    needs: terraform
     strategy:
       matrix:
         environment:
@@ -157,6 +158,15 @@ jobs:
           env-slug: ${{ matrix.environment }}
           recursive: "true"
 
+      - name: Setup Tailscale for access to DMZ
+        uses: tailscale/github-action@v3
+        with:
+          oauth-client-id: ${{ env.TS_OAUTH_CLIENT_ID }}
+          oauth-secret: ${{ env.TS_OAUTH_SECRET }}
+          tags: tag:ci
+          args: --accept-routes
+          use-cache: "true"
+
       - name: Run Ansible setup playbook
         run: |
           make configure
@@ -165,6 +175,7 @@ jobs:
 
   deploy-compose-app:
     runs-on: ubuntu-latest
+    needs: configure-docker-host
     strategy:
       matrix:
         environment:
@@ -213,6 +224,15 @@ jobs:
           project-slug: ${{ env.INFISICAL_APP_SECRETS_SLUG }}
           env-slug: ${{ matrix.environment }}
           recursive: "true"
+
+      - name: Setup Tailscale for access to DMZ
+        uses: tailscale/github-action@v3
+        with:
+          oauth-client-id: ${{ env.TS_OAUTH_CLIENT_ID }}
+          oauth-secret: ${{ env.TS_OAUTH_SECRET }}
+          tags: tag:ci
+          args: --accept-routes
+          use-cache: "true"
 
       - name: Run Ansible setup playbook
         run: |
