--- a/.github/workflows/deploy-all.yaml
+++ b/.github/workflows/deploy-all.yaml
@@ -4,18 +4,29 @@ on:
   push:
     branches:
       - 'main'
-    paths:
-      - 'terraform/**'
-      - 'ansible/**'
-      - 'Makefile'
-      - '.github/workflows/deploy-infra.yaml'
-      - 'scripts/generate_tfstate_backend.py'
+    paths-ignore:
+      - '.github/workflows/weekly-update.yml'
+      - '.gitignore'
+      - 'local-init.sh'
+      - 'README.md'
+  # Uncomment the following lines to enable staging environment
+  # pull_request:
+  #   branches:
+  #     - 'main'
+  #   paths-ignore:
+  #     - '.github/workflows/weekly-update.yml'
+  #     - '.gitignore'
+  #     - 'local-init.sh'
+  #     - 'README.md'
   workflow_dispatch:
     inputs:
       TF_LOG:
         description: 'Terraform log level'
         required: true
         default: 'INFO'
+
+env:
+  environment: ${{ github.event_name == 'pull_request' && 'staging' || 'prod' }} # set environment based on event type
 
 permissions:
   id-token: write
@@ -24,11 +35,6 @@ permissions:
 jobs:
   terraform:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        environment: # uncomment additional environments
-          # - staging
-          - prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -60,7 +66,7 @@ jobs:
           domain: ${{ secrets.INFISICAL_HOST }}
           identity-id: ${{ secrets.INFISICAL_MACHINE_IDENTITY_ID }}
           project-slug: ${{ secrets.INFISICAL_COMMON_SECRETS_SLUG }}
-          env-slug: ${{ matrix.environment }}
+          env-slug: ${{ env.environment }}
           recursive: "true"
 
       - name: Setup Tailscale for PVE authentication
@@ -76,8 +82,8 @@ jobs:
         run: |
           repo=${{ github.repository }}
           app=$(echo "$repo" | cut -d "/" -f 2 | sed 's/compose-//')
-          if [[ "${{ matrix.environment }}" != "prod" ]]; then
-            app="${app}-${{ matrix.environment }}"
+          if [[ "${{ env.environment }}" != "prod" ]]; then
+            app="${app}-${{ env.environment }}"
           fi
           echo "APP_SHORTNAME=$app" >> $GITHUB_ENV
           org=$(echo "$repo" | cut -d "/" -f 1)
@@ -92,7 +98,7 @@ jobs:
           # Project information
           TF_VAR_APP_SHORTNAME: ${{ env.APP_SHORTNAME }}
           TF_VAR_ORG_SHORTNAME: ${{ env.ORG_SHORTNAME }}
-          TF_VAR_ENV_SLUG: ${{ matrix.environment }}
+          TF_VAR_ENV_SLUG: ${{ env.environment }}
           TF_VAR_GITHUB_REPOSITORY: ${{ github.repository }}
           # Infisical environment
           TF_VAR_INFISICAL_PROJECT_SLUG: ${{ secrets.INFISICAL_COMMON_SECRETS_SLUG }}
@@ -109,11 +115,6 @@ jobs:
   configure-docker-host:
     runs-on: ubuntu-latest
     needs: terraform
-    strategy:
-      matrix:
-        environment:
-          # - staging
-          - prod
     name: Configure Docker Host
     
     steps:
@@ -142,8 +143,8 @@ jobs:
           app=$(echo "$repo" | cut -d "/" -f 2 | sed 's/compose-//')
           owner=$(echo "$repo" | cut -d "/" -f 1)
           slug="${app}-${owner}"
-          if [[ "${{ matrix.environment }}" != "prod" ]]; then
-            app="${app}-${{ matrix.environment }}"
+          if [[ "${{ env.environment }}" != "prod" ]]; then
+            app="${app}-${{ env.environment }}"
           fi
           echo "APP_SHORTNAME=$app" >> $GITHUB_ENV
           echo "INFISICAL_APP_SECRETS_SLUG=$slug" >> $GITHUB_ENV
@@ -155,7 +156,7 @@ jobs:
           domain: ${{ secrets.INFISICAL_HOST }}
           identity-id: ${{ secrets.INFISICAL_MACHINE_IDENTITY_ID }}
           project-slug: ${{ env.INFISICAL_APP_SECRETS_SLUG }}
-          env-slug: ${{ matrix.environment }}
+          env-slug: ${{ env.environment }}
           recursive: "true"
 
       - name: Setup Tailscale for access to DMZ
@@ -176,11 +177,6 @@ jobs:
   deploy-compose-app:
     runs-on: ubuntu-latest
     needs: configure-docker-host
-    strategy:
-      matrix:
-        environment:
-          # - staging
-          - prod
     name: Deploy Compose Application
     
     steps:
@@ -209,8 +205,8 @@ jobs:
           app=$(echo "$repo" | cut -d "/" -f 2 | sed 's/compose-//')
           owner=$(echo "$repo" | cut -d "/" -f 1)
           slug="${app}-${owner}"
-          if [[ "${{ matrix.environment }}" != "prod" ]]; then
-            app="${app}-${{ matrix.environment }}"
+          if [[ "${{ env.environment }}" != "prod" ]]; then
+            app="${app}-${{ env.environment }}"
           fi
           echo "APP_SHORTNAME=$app" >> $GITHUB_ENV
           echo "INFISICAL_APP_SECRETS_SLUG=$slug" >> $GITHUB_ENV
@@ -222,7 +218,7 @@ jobs:
           domain: ${{ secrets.INFISICAL_HOST }}
           identity-id: ${{ secrets.INFISICAL_MACHINE_IDENTITY_ID }}
           project-slug: ${{ env.INFISICAL_APP_SECRETS_SLUG }}
-          env-slug: ${{ matrix.environment }}
+          env-slug: ${{ env.environment }}
           recursive: "true"
 
       - name: Setup Tailscale for access to DMZ
