--- a/.github/workflows/deploy-all.yaml
+++ b/.github/workflows/deploy-all.yaml
@@ -35,6 +35,7 @@ permissions:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    name: Deploy Infrastructure
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
