overwrite local changes

--- a/ansible/deploy-compose-project.yml
+++ b/ansible/deploy-compose-project.yml
@@ -11,6 +11,7 @@
         dest: /opt/app
         version: main
         update: yes
+        force: yes
 
     - name: Lock app directory permissions
       file:
