--- a/.github/workflows/deploy-all.yaml
+++ b/.github/workflows/deploy-all.yaml
@@ -7,6 +7,7 @@ on:
     paths-ignore:
       - '.github/workflows/weekly-update.yml'
       - '.gitignore'
+      - 'ansible/update-docker-host.yml'
       - 'local-init.sh'
       - 'README.md'
   # Uncomment the following lines to enable staging environment
