--- a/.github/workflows/deploy-all.yaml
+++ b/.github/workflows/deploy-all.yaml
@@ -129,6 +129,7 @@ jobs:
         uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55 # v5
         with:
           python-version: '3.13'
+          cache: 'pip'
 
       - name: Install Ansible
         run: |
@@ -204,6 +205,7 @@ jobs:
         uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55 # v5
         with:
           python-version: '3.13'
+          cache: 'pip'
 
       - name: Install Ansible
         run: |
