--- a/.github/workflows/deploy-all.yaml
+++ b/.github/workflows/deploy-all.yaml
@@ -133,8 +133,7 @@ jobs:
 
       - name: Install Ansible
         run: |
-          python -m pip install --upgrade pip
-          pip install ansible
+          pip install -r ansible/requirements.txt
 
       - name: Request OIDC Token
         run: |
@@ -209,8 +208,7 @@ jobs:
 
       - name: Install Ansible
         run: |
-          python -m pip install --upgrade pip
-          pip install ansible
+          pip install -r ansible/requirements.txt
 
       - name: Request OIDC Token
         run: |
