--- a/ansible/deploy-compose-project.yml
+++ b/ansible/deploy-compose-project.yml
@@ -3,7 +3,6 @@
   hosts: docker_host
   become: yes
   become_method: sudo
-  become_flags: '-E'
   tasks:
     - name: Ensure repository is present and up to date
       ansible.builtin.git:
@@ -19,8 +18,22 @@
         state: directory
         mode: '0755'
 
+    - name: Log into Infisical CLI
+      shell: |
+        infisical login --method oidc-jwt
+      environment:
+        INFISICAL_API_URL: "{{ lookup('env', 'INFISICAL_API_URL') }}"
+        INFISICAL_JWT: "{{ lookup('env', 'INFISICAL_AUTH_JWT') }}"
+        INFISICAL_MACHINE_IDENTITY_ID: "{{ lookup('env', 'INFISICAL_MACHINE_IDENTITY_ID') }}"
+
     - name: Deploy docker compose project
       shell: |
         cd /opt/app
-        make compose
-      environment: "{{ ansible_env }}"
+        infisical run --projectId $INFISICAL_PROJECT_ID --env $ENVIRONMENT -- make compose
+      environment:
+        INFISICAL_PROJECT_ID: "{{ lookup('env', 'INFISICAL_PROJECT_ID') }}"
+        ENVIRONMENT: "{{ lookup('env', 'ENVIRONMENT') }}"
+
+    - name: Log out of Infisical CLI
+      shell: |
+        infisical reset
