fix infisical API url

--- a/.github/workflows/weekly-update.yml
+++ b/.github/workflows/weekly-update.yml
@@ -80,7 +80,7 @@ jobs:
           ANSIBLE_DISPLAY_SKIPPED_HOSTS: 'false'
           ANSIBLE_FORCE_COLOR: '1'
           ENVIRONMENT: ${{ matrix.environment }}
-          INFISICAL_API_URL: "https://${{ secrets.INFISICAL_HOST }}/api"
+          INFISICAL_API_URL: "${{ secrets.INFISICAL_HOST }}/api"
           INFISICAL_JWT: ${{ env.INFISICAL_JWT }}
           INFISICAL_MACHINE_IDENTITY_ID: ${{ secrets.INFISICAL_MACHINE_IDENTITY_ID }}
           INFISICAL_PROJECT_ID: ${{ env.INFISICAL_PROJECT_ID }}
