--- a/ansible/update-docker-host.yml
+++ b/ansible/update-docker-host.yml
@@ -39,25 +39,17 @@
         update: yes
         force: yes
 
-    - name: Log into Infisical CLI
+    - name: Update & restart docker compose project
       shell: |
-        infisical login --method oidc-auth
+        cd /opt/app
+        export INFISICAL_TOKEN=$(infisical login --method oidc-auth --silent --plain)
+        infisical run --projectId $INFISICAL_PROJECT_ID --env $ENVIRONMENT -- make compose
       environment:
         INFISICAL_API_URL: "{{ lookup('env', 'INFISICAL_API_URL') }}"
         INFISICAL_JWT: "{{ lookup('env', 'INFISICAL_AUTH_JWT') }}"
         INFISICAL_MACHINE_IDENTITY_ID: "{{ lookup('env', 'INFISICAL_MACHINE_IDENTITY_ID') }}"
-
-    - name: Update & restart docker compose project
-      shell: |
-        cd /opt/app
-        infisical run --projectId $INFISICAL_PROJECT_ID --env $ENVIRONMENT -- make compose
-      environment:
-        ENVIRONMENT: "{{ lookup('env', 'ENVIRONMENT') }}"
         INFISICAL_PROJECT_ID: "{{ lookup('env', 'INFISICAL_PROJECT_ID') }}"
-
-    - name: Log out of Infisical CLI
-      shell: |
-        infisical reset
+        ENVIRONMENT: "{{ lookup('env', 'ENVIRONMENT') }}"
 
     - name: Display update summary
       debug:
