--- a/ansible/deploy-compose-project.yml
+++ b/ansible/deploy-compose-project.yml
@@ -4,7 +4,7 @@
   become: yes
   become_method: sudo
   tasks:
-    - name: Ensure repository is present and up to date
+    - name: Pull git repository
       ansible.builtin.git:
         repo: https://github.com/{{ lookup('env', 'GITHUB_REPOSITORY') }}
         dest: /opt/app
